; ModuleID = '/home/carl/AnghaBench/freebsd/sys/rpc/extr_clnt_vc.c_clnt_vc_freeres.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/rpc/extr_clnt_vc.c_clnt_vc_freeres.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@XDR_FREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32 (%struct.TYPE_5__*, i8*)*, i8*)* @clnt_vc_freeres to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clnt_vc_freeres(i32* %0, i32 (%struct.TYPE_5__*, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32 (%struct.TYPE_5__*, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_5__, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 (%struct.TYPE_5__*, i8*)* %1, i32 (%struct.TYPE_5__*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i32, i32* @XDR_FREE, align 4
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load i32 (%struct.TYPE_5__*, i8*)*, i32 (%struct.TYPE_5__*, i8*)** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 %11(%struct.TYPE_5__* %7, i8* %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
